# wzrd-algo

./: .env  .env.example  .gitignore  CAPABILITIES_VERIFICATION.md  CLAUDE.md  CLAUDE_API_USAGE.md  CLAUDE_SETUP_GUIDE.md  FINAL_TEST_SUMMARY.md  GPT_CUSTOM_INSTRUCTIONS.md  GPT_ULTRA_CONDENSED.md  PLAYWRIGHT_TEST_REPORT.md  README-BMAD.md  README.md  STRATEGY_ARCHITECT_IMPROVEMENTS.md  SYSTEM_EVOLUTION.md  VIBE-TO-PRODUCT-COMPLETE.md  alltext.txt  claude_anthropic_client.py  claude_client.py  claude_client_alternative.py  claude_code_client.py  claude_mcp_client.py  corrected_spy_strategy.py  create_best_trades_chart.py  create_detailed_trades_report.py  create_proper_candlestick_chart.py  create_realistic_fills_chart.py  create_scaled_strategy_chart.py  create_simple_trades_chart.py  create_trades_summary_chart.py  debug_strategy.py  demo_enhanced_strategy_architect.py  demo_vectorbt_backtest.py  enhanced_spy_backtest.py  enhanced_spy_chart.py  enhanced_spy_strategy.py  final_corrected_strategy.py  final_validated_spy_strategy.py  gpt-system-instructions.md  indicator_analysis.py  (+31 more)
.claude/: settings.json
.next/: prerender-manifest.json  trace
agents/: __init__.py  conversation_orchestrator_enhanced.py  strategy_architect_enhanced.py
app/: page.tsx
apps/: strategy_viewer.py  strategy_viewer_enhanced_old.py
archive/: validated_example_route_start.json  wzrd_strategy_signals.py
backtest_charts/: realistic_trades_details.csv  spy_strategy_stats.json  spy_strategy_trades.csv
core/: __init__.py
debug_files/: test_dynamic_date_strategy.json  (+4 more)
docs/: README.md  (+13 more)
(+146 files in other folders)
